--- a/package.json
+++ b/package.json
@@ -7,12 +7,22 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-mincer": "^1.1.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-livereload": "0.0.24",
     "express.io": "^1.1.13",
+    "glob": "^5.0.15",
     "jade": "~1.11.0",
+    "mincer": "^1.3.0",
+    "mincer-babel": "0.0.4",
     "morgan": "~1.6.1",
+    "node.extend": "^1.1.5",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.10.0",
+    "connect": "^3.4.0"
   }
 }
