--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ node_modules
 # Users Environment Variables
 .lock-wscript
 
+tmp/
 
 # Bower components
 vendor/assets/javascripts/bower_components
