--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
-    "connect": "^3.4.0"
+    "connect": "^3.4.0",
+    "underscore": "^1.8.3"
   }
 }
