--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
     "mincer-babel": "0.0.4",
     "morgan": "~1.6.1",
     "node.extend": "^1.1.5",
-    "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {
     "coffee-script": "^1.10.0",
     "connect": "^3.4.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "serve-favicon": "~2.3.0"
   }
 }
