--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.5.0",
     "body-parser": "~1.13.2",
+    "coffee-script": "^1.10.0",
+    "connect": "^3.4.0",
     "connect-mincer": "^1.1.0",
     "cookie-parser": "~1.3.5",
+    "csso": "^1.3.11",
     "debug": "~2.2.0",
+    "ejs": "^2.3.4",
     "express": "~4.13.1",
     "express-livereload": "0.0.24",
     "express.io": "^1.1.13",
@@ -18,10 +23,11 @@
     "mincer": "^1.3.0",
     "mincer-babel": "0.0.4",
     "morgan": "~1.6.1",
+    "node-sass": "^3.4.1",
     "node.extend": "^1.1.5",
-    "coffee-script": "^1.10.0",
-    "connect": "^3.4.0",
+    "serve-favicon": "~2.3.0",
+    "uglify-js": "^2.5.0",
     "underscore": "^1.8.3",
-    "serve-favicon": "~2.3.0"
+    "wrench": "^1.5.8"
   }
 }
