--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "bower install && node ./bin/precompile_assets",
+    "postinstall": "node node_modules/bower/bin/bower install && node ./bin/precompile_assets",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -28,5 +28,8 @@
     "uglify-js": "^2.5.0",
     "underscore": "^1.8.3",
     "wrench": "^1.5.8"
+  },
+  "devDependencies": {
+    "bower": "^1.6.5"
   }
 }
