--- a/config/settings.json
+++ b/config/settings.json
@@ -1,4 +1,8 @@
 {
-  "development": {},
-  "production": {}
+  "development": {
+    "googleAuthCallbackURL": "http://planningpoker.com:3000/callback"
+  },
+  "production": {
+    "googleAuthCallbackURL": "http://infinite-savannah-3059.herokuapp.com/callback"
+  }
 }
