--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express.io": "^1.1.13",
     "glob": "^5.0.15",
     "jade": "~1.11.0",
+    "le_node": "^1.1.1",
     "mincer": "^1.3.0",
     "mincer-babel": "0.0.4",
     "morgan": "~1.6.1",
